fix: update and fix getCache API + pr notes + logging
